"ADD --- Se resolvió la Kata1"